--- a/htmlgame/game.html
+++ b/htmlgame/game.html
@@ -1,13 +1,19 @@
-<html>
+<html class="default">
 <link type="text/css" rel="stylesheet" href="game.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 <script src="game.js"></script>
+<script src="brickone.js"></script>
+<script src="mary.js"></script>
 <body>
-<div id="ground"></div>
-<div id="dude">
+<div id="camera" style="display: none">
     <div class="relative">
-        <div class="head"></div>
-        <div class="body"></div>
+        <div id="ground"></div>
+        <div id="dude">
+            <div class="relative">
+                <div class="head"></div>
+                <div class="body"></div>
+            </div>
+        </div>
     </div>
 </div>
 </body>
