htmlgame: complete rewrite of collision detection and game logic. SEXY!

--- a/htmlgame/game.html
+++ b/htmlgame/game.html
@@ -1,10 +1,15 @@
-<html class="default">
+<html class="black">
 <link type="text/css" rel="stylesheet" href="game.css" />
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 <script src="game.js"></script>
 <script src="mary.js"></script>
 <body>
-<div id="camera" style="display: none">
+<div id="camera">
+    <div id="background">
+        <div id="dude-sprite"></div>
+    </div>
+</div>
+<!--div id="camera" style="display: none">
     <div class="relative">
         <div id="ground"></div>
         <div id="dude">
@@ -14,6 +19,6 @@
             </div>
         </div>
     </div>
-</div>
+</div-->
 </body>
 </html>
