corresponding html for new background images/css

--- a/htmlgame/game.html
+++ b/htmlgame/game.html
@@ -6,6 +6,8 @@
 <body>
 <div id="camera">
     <div id="background">
+        <div class="intro-background"></div>
+        <div class="song-background"></div>
         <div id="dude-sprite"></div>
     </div>
 </div>
