--- a/htmlgame/index.html
+++ b/htmlgame/index.html
@@ -14,8 +14,8 @@
         <div id="debug"></div>
         <div id="camera">
             <div id="background">
-                <div class="intro_background"></div>
-                <div class="song_background"></div>
+                <div id="intro"></div>
+                <div id="song"></div>
                 <div id="dude"></div>
             </div>
         </div>
